<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/action_margin"
            android:text="@string/welcome_to_appauth"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <Button
            android:id="@+id/h_btn"
            style="@style/ButtonStyle"
            android:text="@string/login_by_h" />

        <Button
            android:id="@+id/g_btn"
            style="@style/ButtonStyle"
            android:text="@string/login_by_g" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>