<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_title_margin"
        android:paddingTop="@dimen/activity_title_margin"
        android:paddingRight="@dimen/activity_title_margin"
        tools:context="com.huawei.hmssample.HuaweiIdActivity">

        <TextView
            android:text="@string/sample_hwid_description"
            style="@style/TitleStyle"
            />


        <Button
            android:id="@+id/hwid_signin"
            style="@style/ButtonStyle"
            android:text="@string/hwid_sign_in" />

        <Button
            android:id="@+id/hwid_signInCode"
            style="@style/ButtonStyle"
            android:text="@string/hwid_revokeAccess" />


        <Button
            android:id="@+id/hwid_signout"
            style="@style/ButtonStyle"
            android:text="@string/hwid_sign_out" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/action_margin"
            android:layout_marginRight="@dimen/action_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/action_margin"
                android:layout_marginRight="@dimen/action_margin"
                android:layout_weight="4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="6"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/givenName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/action_margin"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/familyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/action_margin"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/action_margin"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>