<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/authorize"
        style="@style/ButtonStyle"
        android:text="@string/make_authorization_request" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/makeApiCall"
        style="@style/ButtonStyle"
        android:text="@string/make_api_call"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signOut"
        style="@style/ButtonStyle"
        android:text="@string/sign_out"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/action_margin"
        android:layout_marginRight="@dimen/action_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/action_margin"
            android:layout_marginRight="@dimen/action_margin"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/givenName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/action_margin"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/familyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/action_margin"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/action_margin"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
